Fixed clear method for Linux